# newkateplugin

./: CMakeLists.txt  TODO  newkateplugin.cpp  newkateplugin.desktop  newkateplugin.h  nlbookmarkmodel.cpp  nlbookmarkmodel.h  nlbookmarkview.cpp  nlbookmarkview.h  nlconfigpage.cpp  nlconfigpage.h  nldialog.cpp  nldialog.h  nlmodel.cpp  nlmodel.h  nlopendialog.cpp  nlopendialog.h  pluginview.cpp  pluginview.h
ui/: nldialog.ui  nlopendialog.ui
